Alignment fixes

--- a/application/views/global.css
+++ b/application/views/global.css
@@ -564,7 +564,7 @@ label:focus,
 
 .nav-controller {
     display: inline-block;
-    padding: 34px 41px;
+    padding: 21px 5px;
 }
 
 .nav-controller div{
